tests/ui/traits/as-struct-constructor.stderr
error[E0574]: expected struct, variant or union type, found trait `TraitNotAStruct`
  --> $DIR/as-struct-constructor.rs:4:5
   |
LL |     TraitNotAStruct{ value: 0 };
   |     ^^^^^^^^^^^^^^^ not a struct, variant or union type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0574`.
